          only read the files read-permissions and write-permissions,
          but also the files in the subdirectories read-permissions.d
          and write-permissions.d.

        New Features

        - 'mtn conflicts store' now outputs a count of the conflicts,
          and the name of the conflicts file. 
          (fixes monotone issue 108)
        
        Bugs fixed

        - Improve help, fix arg indexing in 'conflicts resolve_first'
          (fixes monotone issue 101)
        
        - 'mtn privkey' did not recognize private keys solely available
          in the key store. this has been fixed.

        - Add compatibility with Botan 1.9.9 and newer
          (fixes monotone issue 104)

        - mtn pull and mtn sync would always say that your workspace
          has not been updated.  Now, it only does that when you used
          the --update option and there were no updates.
          (fixes monotone issue 106)

        - 'automate remote' and 'automate remote_stdio' now use
          a given database given by an alias to read, store and validate
          a remote server's key fingerprint (fixes monotone issue 95)

        - monotone gives a proper error message now if a netsync URI
          with the 'mtn' scheme misses the required host part
          (fixes monotone issue 110)

        - Whenever a binary file was removed and one would try to get
          a diff using mtn diff, it would report that "/dev/null is
          binary".  This has been changed to it reports the actual
          name of the removed file instead.
          (fixes monotone issue 111)

        - monotone no longer wrongly falls back on a :memory: database
          when no database option is given. It also prints out an
          informational message for commands like 'setup' and 'clone'
          that fall back on the configured default database, again,
          if no database is specified for these commands.
          (fixes monotone issue 113)

        Internal
