@@ -3,22 +3,22 @@
 mtn_setup()
 
 addfile("foo", "foo")
-addfile("bar", "bar\none\ntwo\nthree")
-addfile("baz", "baz\naaa\nbbb\nccc")
+addfile("bar", "bar\none\ntwo\nthree\n")
+addfile("baz", "baz\r\naaa\r\nbbb\r\nccc")
 commit("testbranch", "base")
 base = base_revision()
 
 writefile("foo", "foo\nfirst\nrevision")
-writefile("bar", "bar\nzero\none\ntwo\nthree")
-writefile("baz", "baz\nAAA\nbbb\nccc")
+writefile("bar", "bar\nzero\none\ntwo\nthree\n")
+writefile("baz", "baz\r\nAAA\r\nbbb\r\nccc")
 commit("testbranch", "first")
 first = base_revision()
 
 revert_to(base)
 
 writefile("foo", "foo\nsecond\nrevision")
-writefile("bar", "bar\none\ntwo\nthree\nfour")
-writefile("baz", "baz\naaa\nbbb\nCCC")
+writefile("bar", "bar\none\ntwo\nthree\nfour\n")
+writefile("baz", "baz\r\naaa\r\nbbb\r\nCCC")
 commit("testbranch", "second")
 second = base_revision()
 
@@ -30,7 +30,7 @@ check(mtn("automate", "file_merge", first, "bar", second, "bar"), 0, true, nil)
 canonicalize("stdout")
 check(samefile("expected_bar", "stdout"))
 
-writefile("expected_baz", "baz\nAAA\nbbb\nCCC\n")
+writefile("expected_baz", "baz\r\nAAA\r\nbbb\r\nCCC")
 check(mtn("automate", "file_merge", first, "baz", second, "baz"), 0, true, nil)
 canonicalize("stdout")
 check(samefile("expected_baz", "stdout"))
